# advent-of-code

./: CHANGELOG.md  LICENSE  advent-of-code.cabal
app/: Main.hs
src/: Lib.hs
src/Solutions/: Year2023.hs  Year2024.hs
test/: Spec.hs  Year2023.hs  Year2024.hs
