cabal-version:      3.0

name:               advent-of-code
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Dan Eads
maintainer:         24708079+daneads@users.noreply.github.com

build-type:         Simple

extra-doc-files:    CHANGELOG.md
data-files:         data/**/*.txt

common shared-properties
    ghc-options: -Wall
    default-language: Haskell2010

library
    import: shared-properties
    exposed-modules:
        Lib
        Solutions.Year2023
        Solutions.Year2024
    other-modules:
        Paths_advent_of_code
    autogen-modules:
        Paths_advent_of_code
    hs-source-dirs:
        src
    build-depends:
        base >=4.7 && <5
        , filepath
        , text
    default-language: Haskell2010

executable advent-of-code-exe
    import: shared-properties
    main-is: Main.hs
    other-modules:
        Paths_advent_of_code
    autogen-modules:
        Paths_advent_of_code
    hs-source-dirs:
        app
    build-depends:
        advent-of-code
        , base >=4.7 && <5
        , filepath

test-suite advent-of-code-test
    import: shared-properties
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Year2023
        Year2024
        Paths_advent_of_code
    autogen-modules:
        Paths_advent_of_code
    hs-source-dirs:
        test
    build-depends:
        HUnit
        , advent-of-code
        , base >=4.7 && <5
        , filepath
